Update unit tests for backend after connecting with the frontend