@@ -13,21 +13,30 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import java.time.LocalDate;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.odaat.odaat.dto.request.TaskRequest;
+import com.odaat.odaat.model.Project;
 import com.odaat.odaat.model.Task;
 import com.odaat.odaat.service.SecurityService;
 import com.odaat.odaat.service.TaskService;
+import com.odaat.odaat.utils.MockUtil;
 
 class TaskControllerTest {
 
@@ -42,26 +51,47 @@ class TaskControllerTest {
     @InjectMocks
     private TaskController taskController;
 
+    private ObjectMapper objectMapper = new ObjectMapper();
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
         mockMvc = MockMvcBuilders.standaloneSetup(taskController).build();
+        objectMapper.findAndRegisterModules();
     }
 
     @Test
-    void testGetAllTasks() throws Exception {
-        when(taskService.findAll(null, null)).thenReturn(Collections.singletonList(new Task()));
+    void testGetTasksByProject() throws Exception {
+        Task task = MockUtil.mockInstance(Task.class);
+        Integer projectId = task.getProject().getId();
+        when(taskService.findAll(projectId, null)).thenReturn(List.of(task));
 
-        mockMvc.perform(get("/api/task/get"))
-                .andExpect(status().isOk());
+        mockMvc.perform(get("/api/task/get?projectId=" + projectId))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].description").value(task.getDescription()));
 
-        verify(taskService, times(1)).findAll(null, null);
+        verify(taskService, times(1)).findAll(projectId, null);
+    }
+
+    @Test
+    void testGetTasksByDate() throws Exception {
+        Task task = MockUtil.mockInstance(Task.class);
+        LocalDate date = task.getStartTime().toLocalDate();
+        when(taskService.findAll(null, date)).thenReturn(List.of(task));
+
+        mockMvc.perform(get("/api/task/get?date=" + date))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].description").value(task.getDescription()));
+
+        verify(taskService, times(1)).findAll(null, date);
     }
 
     @Test
     void testGetTaskById() throws Exception {
         Task task = new Task();
+        Project project = new Project();
         task.setId(1);
+        task.setProject(project);
         when(taskService.findById(anyInt())).thenReturn(Optional.of(task));
 
         mockMvc.perform(get("/api/task/detail/1"))
@@ -73,30 +103,34 @@ class TaskControllerTest {
 
     @Test
     void testCreateTask() throws Exception {
-        Task task = new Task();
+        TaskRequest taskRequest = MockUtil.mockInstance(TaskRequest.class);
+        Task task = taskController.convertToEntity(taskRequest);
+        task.setId(1);
         when(taskService.save(any(Task.class))).thenReturn(task);
 
         mockMvc.perform(post("/api/task/add")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content("{\"description\": \"Test Task\", \"uzerId\": 1, \"projectId\": 1}"))
+                .content(objectMapper.writeValueAsString(taskRequest)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").doesNotExist());
+                .andExpect(jsonPath("$.id").value(1));
 
         verify(taskService, times(1)).save(any(Task.class));
     }
 
     @Test
     void testUpdateTask() throws Exception {
-        Task task = new Task();
+        TaskRequest taskRequest = MockUtil.mockInstance(TaskRequest.class);
+        taskRequest.setDescription("updated description");
+        Task task = taskController.convertToEntity(taskRequest);
         task.setId(1);
         when(taskService.existsById(1)).thenReturn(true);
         when(taskService.save(any(Task.class))).thenReturn(task);
 
         mockMvc.perform(put("/api/task/update/1")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content("{\"description\": \"Updated Task\", \"uzerId\": 1, \"projectId\": 1}"))
+                .content(objectMapper.writeValueAsString(taskRequest)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.description").value("updated description"));
 
         verify(taskService, times(1)).existsById(1);
         verify(taskService, times(1)).save(any(Task.class));
